api construida
